apps/distro-mirror/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: distro-mirror-frontend
spec:
  podSelector:
    matchLabels:
      app: distro-mirror-frontend
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
